# lcu-ai-mod

./: .gitignore  LICENSE  README.md  TEST_TABLE.md  build.gradle  gradle.properties
backend/: .env.example  LICENSE  body_request_diagnostics.py  llm_provider.py  main.py  requirements.txt  server.py
backend/agent/: __init__.py  access_policy.py  action_agent.py  action_manager.py  agent_state.py  audit_log.py  body_registry.py  commands.py  config_store.py  conversation_agent.py  decision_scheduler.py  execution_agent.py  identity.py  llm_service.py  memory.py  memory_catalog.py  memory_management.py  memory_overlay.py  message_db.py  modes_engine.py  multi_agent_orchestrator.py  orchestrator.py  persona_agent.py  persona_system.py  planner.py  scoped_knowledge.py  self_prompter.py  server_command_policy.py  session.py  skill_registry.py  skills.py  storage_policy.py  task_coordinator.py  task_preset_registry.py  task_runner.py  timing_gate.py  token_tracker.py  user_profile.py  world_model.py
backend/protocol/: __init__.py  body.py  wire_client.py
backend/sdk/: NOTICE  README.md  __init__.py  browser_client.js  package.json  pyproject.toml  python_client.py
backend/tests/: test_access_policy.py  test_agent_state.py  test_audit_log.py  test_body_registry.py  test_commands.py  test_config_store.py  test_decision_scheduler.py  test_identity.py  (+20 more)
docs/: deployment.md  feature-one-real-player.md  mod-compatibility.md  project-tracker.md  roadmap.md  runtime-orchestration.md  sdk.md  server-policy-safety.md  vanilla-capability-matrix.md
scripts/: headed-test.ps1
(+69 files in other folders)
