[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lcu-companion-sdk"
version = "0.1.0"
description = "Python SDK for integrating with an LCU Minecraft AI companion"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = ["httpx>=0.28.0"]

[tool.setuptools]
packages = ["sdk"]
package-dir = {sdk = "."}
